--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
   "dependencies": {
     "axios": "^1.5.0",
     "bootstrap": "^5.3.2",
+    "bootstrap-icons": "^1.11.1",
     "core-js": "^3.8.3",
+    "element-plus": "^2.4.1",
     "vue": "^3.2.13",
     "vue-router": "^4.2.4"
   },
