--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "bootstrap-icons": "^1.11.1",
     "core-js": "^3.8.3",
     "element-plus": "^2.4.1",
+    "highcharts": "^11.1.0",
     "vue": "^3.2.13",
     "vue-router": "^4.2.4"
   },
