--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
     "core-js": "^3.8.3",
     "element-plus": "^2.4.1",
     "highcharts": "^11.1.0",
+    "highcharts-vue": "^1.4.3",
     "vue": "^3.2.13",
-    "vue-router": "^4.2.4"
+    "vue-router": "^4.2.4",
+    "vue3-highcharts": "^0.1.3"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
