--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "highcharts-vue": "^1.4.3",
     "vue": "^3.2.13",
     "vue-router": "^4.2.4",
-    "vue3-highcharts": "^0.1.3"
+    "vue3-highcharts": "^0.1.3",
+    "vuex": "^4.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
