--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "highcharts": "^11.1.0",
     "highcharts-vue": "^1.4.3",
     "vue": "^3.2.13",
+    "vue-loading-overlay": "^6.0.3",
     "vue-router": "^4.2.4",
     "vue3-highcharts": "^0.1.3",
     "vuex": "^4.1.0"
