--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "bootstrap": "^5.3.2",
     "bootstrap-icons": "^1.11.1",
     "core-js": "^3.8.3",
+    "date-fns": "^2.30.0",
     "element-plus": "^2.4.1",
     "highcharts": "^11.1.0",
     "highcharts-vue": "^1.4.3",
