--- a/nginx-default.conf
+++ b/nginx-default.conf
@@ -6,18 +6,23 @@ server {
     location / {
         root   /usr/share/nginx/html;
         index  index.html;
-
         # https://router.vuejs.org/guide/essentials/history-mode.html#nginx
         try_files $uri $uri/ /index.html;
-
         #include /etc/nginx/conf.d/headers.conf.include;
     }
-
-    #error_page  404              /404.html;
-
-    # redirect server error pages to the static page /50x.html
-    #error_page   500 502 503 504  /50x.html;
-    #location = /50x.html {
-    #    root   /usr/share/nginx/html;
-    #}
 }
+
+#server {
+#    listen       443 ssl;
+#    server_name  doi.upc.edu;
+
+#    location / {
+#        root   /usr/share/nginx/html;
+#        index  index.html;
+#        try_files $uri $uri/ /index.html;
+#    }
+
+#    ssl_certificate /SAN/certificats/doi.upc.edu/doi_upc_edu.pem;
+#    ssl_certificate_key /SAN/certificats/doi.upc.edu/doi_upc_edu.key;
+#    ssl_dhparam /SAN/certificats/SectigoCA.crt;
+#}
